<resources>
    <string name="app_name">EcoScan</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_app">Welcome To App</string>
    <string name="welcome_teks_1">Here’s a good place for a brief overview of the app or it’s key features.</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="text_policy_login"><![CDATA[If you are creating a new account,\n Terms & Conditions and Privacy Policy will apply.]]></string>
    <string name="description_login_register">Please select your preferred method \n to continue setting up your account</string>
    <string name="login_register_header">Login or sign up</string>
    <string name="signup_header">Create Account</string>
    <string name="login_header">Login Now</string>
    <string name="description_signup">Please registration with email and sign up \n to continue using our app</string>
    <string name="description_login">Please login to continue using our app</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="error_password">The password must be at least 8 characters long</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="full_name_profile">Full Name</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="alertFailure">Sorry</string>
    <string name="alertSuccess">Yeah</string>
    <string name="ButtonAlert">OK</string>
    <string name="back">Back</string>
    <string name="city">City</string>
    <string name="select_an_image_method">Select an image method</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Classification</string>
    <string name="hot_topic">Hot Topic</string>
    <string name="histories_scan">Histories Scan :</string>
    <string name="eco_scan">ECO SCAN</string>
    <string name="the_waste_is_organic">The waste is organic</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="classification_successful">classification successful</string>
    <string name="the_waste_is">The waste is %1$s !</string>
    <string name="processing">Processing...</string>
    <string name="type_waste">Type Waste : %1$s</string>
    <string name="date">Date : %1$s</string>
    <string name="invalid_token">Oh no! Your token seems to be invalid. Please check and try again.</string>
    <string name="logout_alert">Are you sure you want to log out?</string>
    <string name="attention">Attention</string>
    <string name="cancel">Cancel</string>
</resources>